# cmac

./: .gitignore  README.rst  environment-3.6.yml  environment.yml  pyproject.toml  setup.py
.github/workflows/: pypi-release.yml  security-analysis.yml  tests.yml  virus.yml
cmac/: __init__.py  calc_kdp_ray_fir.pyx  cmac_ppi_quicklooks.py  cmac_processing.py  cmac_radar.py  cmac_rhi_quicklooks.py  config.py  csu_kdp.py  default_config.py  radar_clutter.py
cmac/tests/: test_config.py  test_processing.py
configs/: bnfcsapr2.yaml
continuous_integration/: environment-ci.yml
documents/: example_config.yaml
scripts/: cmac  cmac_animation  cmac_dask  gen_clutter_dask  inventory
