[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "cython",
    "oldest-supported-numpy; python_version<'3.9'",
    "numpy>=2.0; python_version>='3.9'",
]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
# Install with `pip install -e .[test]` to get the testing extras.
# pytest-mpl drives the per-figure baseline image comparisons in
# cmac/tests/test_processing.py. Run with `pytest --mpl` to enable
# comparison; without it, baseline tests still pass as long as a Figure
# is returned.
test = [
    "pytest",
    "pytest-mpl",
    "xarray",
    "act-atmos",
]
